--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^9.0.1",
         "css-loader": "^6.5.0",
-        "file-loader": "^6.2.0",
         "gsap": "^3.5.1",
-        "html-loader": "^3.0.0",
         "html-webpack-plugin": "^5.5.0",
         "lil-gui": "^0.16.1",
         "mini-css-extract-plugin": "^2.4.3",
@@ -26,5 +24,9 @@
         "webpack-cli": "^4.9.1",
         "webpack-dev-server": "^4.4.0",
         "webpack-merge": "^5.8.0"
+    },
+    "devDependencies": {
+        "file-loader": "^6.2.0",
+        "html-loader": "^3.1.0"
     }
 }
